tests/invalid/02_sin_loop.mini0
// Falta 'loop' en while

fun main()
    while true
        x: int
end